# clavr

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  ORG_PROFILE_README.md  README.md  alembic.ini  features_and_agents.md  main.py  monitor_indexing_live.py  monitor_indexing_progress.py  onboarding.md  onboarding_1.md  probe_arango.py  profile_latency.py  pyproject.toml  pytest.ini  requirements-ml.txt  requirements.txt
.archived_docs/: CICD_IMPLEMENTATION_COMPLETE.md  CODEBASE_IMPROVEMENT_PLAN.md  CURRENT_STATUS.md  DATA_EXPORT_FINAL_SUMMARY.md  DATA_EXPORT_FINAL_VERIFIED.md  DATA_EXPORT_IMPLEMENTATION_COMPLETE.md  DATA_EXPORT_QUICK_REF.md  DATA_EXPORT_TASKS_COMPLETE.md  DELEGATION_STUB_REMOVAL_COMPLETE.md  DELEGATION_STUB_REMOVAL_ITERATIONS1-3_COMPLETE.md  DELEGATION_STUB_REMOVAL_ITERATIONS1-4_COMPLETE.md  DELEGATION_STUB_REMOVAL_STATUS.md  EMAIL_PARSER_ITERATION1_COMPLETE.md  EMAIL_PARSER_ITERATION4_COMPLETE.md  EMAIL_PARSER_ITERATION5_PLAN.md  EMAIL_PARSER_MODULARIZATION_PLAN.md  EMAIL_PARSER_REFACTORING_COMPLETE.md  EMAIL_PARSER_SPLIT_PLAN.md  GOOGLE_TASKS_WORKER_COMPLETE.md  IMPROVEMENTS_IMPLEMENTED.md  MAINTENANCE_TASKS_FIXES_COMPLETE.md  MAINTENANCE_TASKS_QUICK_REF.md  NOTIFICATION_TASKS_FINAL_COMPLETE.md  NOTIFICATION_TASKS_QUICK_SUMMARY.md  NOTIFICATION_TASKS_VERIFIED.md  OAUTH_IMPLEMENTATION_COMPLETE.md  PHASE3A_COMPLETE_SUMMARY.md  PHASE3A_STATUS_REPORT.md  PHASE3A_TASK_EXTRACTION_COMPLETE.md  PHASE3B_COMPLETE_VERIFIED.md  PHASE3B_DECISION_POINT.md  PHASE3B_ORGANIZATION_COMPLETE.md  PHASE3C_ALIGNMENT_CHECK.md  PHASE3C_COMPLETE_PROGRESS.md  PHASE3C_CURRENT_PROGRESS.md  PHASE3C_EMAIL_EXTRACTION_COMPLETE.md  (+68 more)
(+962 files in other folders)
